@@ -1,7 +1,9 @@
 package org.opensearch.securityanalytics.threatIntel.transport.monitor;
 
+import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.opensearch.OpenSearchStatusException;
 import org.opensearch.action.support.ActionFilters;
 import org.opensearch.action.support.HandledTransportAction;
@@ -13,31 +15,41 @@ import org.opensearch.common.settings.Settings;
 import org.opensearch.common.unit.TimeValue;
 import org.opensearch.commons.alerting.AlertingPluginInterface;
 import org.opensearch.commons.alerting.action.IndexMonitorRequest;
+import org.opensearch.commons.alerting.action.IndexMonitorResponse;
 import org.opensearch.commons.alerting.model.DataSources;
 import org.opensearch.commons.alerting.model.DocLevelMonitorInput;
 import org.opensearch.commons.alerting.model.Monitor;
+import org.opensearch.commons.alerting.model.remote.monitors.RemoteDocLevelMonitorInput;
+import org.opensearch.commons.alerting.model.remote.monitors.RemoteMonitorTrigger;
 import org.opensearch.commons.authuser.User;
 import org.opensearch.core.action.ActionListener;
 import org.opensearch.core.common.io.stream.NamedWriteableRegistry;
 import org.opensearch.core.rest.RestStatus;
+import org.opensearch.core.xcontent.NamedXContentRegistry;
 import org.opensearch.index.seqno.SequenceNumbers;
 import org.opensearch.rest.RestRequest;
 import org.opensearch.securityanalytics.settings.SecurityAnalyticsSettings;
 import org.opensearch.securityanalytics.threatIntel.action.monitor.IndexThreatIntelMonitorAction;
 import org.opensearch.securityanalytics.threatIntel.action.monitor.request.IndexThreatIntelMonitorRequest;
 import org.opensearch.securityanalytics.threatIntel.action.monitor.response.IndexThreatIntelMonitorResponse;
-import org.opensearch.securityanalytics.threatIntel.iocscan.dto.PerIocTypeScanInput;
-import org.opensearch.securityanalytics.threatIntel.sacommons.monitor.ThreatIntelMonitorDto;
+import org.opensearch.securityanalytics.threatIntel.model.monitor.PerIocTypeScanInput;
+import org.opensearch.securityanalytics.threatIntel.model.monitor.ThreatIntelInput;
+import org.opensearch.securityanalytics.threatIntel.sacommons.monitor.ThreatIntelTriggerDto;
+import org.opensearch.securityanalytics.threatIntel.util.ThreatIntelMonitorUtils;
 import org.opensearch.securityanalytics.transport.SecureTransportAction;
 import org.opensearch.securityanalytics.util.SecurityAnalyticsException;
 import org.opensearch.tasks.Task;
 import org.opensearch.threadpool.ThreadPool;
 import org.opensearch.transport.TransportService;
 
+import java.io.IOException;
 import java.time.Instant;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
+import static org.opensearch.securityanalytics.threatIntel.model.monitor.SampleRemoteDocLevelMonitorRunner.THREAT_INTEL_MONITOR_TYPE;
 import static org.opensearch.securityanalytics.transport.TransportIndexDetectorAction.PLUGIN_OWNER_FIELD;
 
 public class TransportIndexThreatIntelMonitorAction extends HandledTransportAction<IndexThreatIntelMonitorRequest, IndexThreatIntelMonitorResponse> implements SecureTransportAction {
@@ -46,6 +58,7 @@ public class TransportIndexThreatIntelMonitorAction extends HandledTransportActi
     private final ThreadPool threadPool;
     private final Settings settings;
     private final NamedWriteableRegistry namedWriteableRegistry;
+    private final NamedXContentRegistry xContentRegistry;
     private final Client client;
     private volatile Boolean filterByEnabled;
     private final TimeValue indexTimeout;
@@ -57,12 +70,14 @@ public class TransportIndexThreatIntelMonitorAction extends HandledTransportActi
             final ThreadPool threadPool,
             final Settings settings,
             final Client client,
-            final NamedWriteableRegistry namedWriteableRegistry
+            final NamedWriteableRegistry namedWriteableRegistry,
+            final NamedXContentRegistry namedXContentRegistry
     ) {
         super(IndexThreatIntelMonitorAction.NAME, transportService, actionFilters, IndexThreatIntelMonitorRequest::new);
         this.threadPool = threadPool;
         this.settings = settings;
         this.namedWriteableRegistry = namedWriteableRegistry;
+        this.xContentRegistry = namedXContentRegistry;
         this.filterByEnabled = SecurityAnalyticsSettings.FILTER_BY_BACKEND_ROLES.get(this.settings);
         this.indexTimeout = SecurityAnalyticsSettings.INDEX_TIMEOUT.get(this.settings);
         this.client = client;
@@ -70,65 +85,96 @@ public class TransportIndexThreatIntelMonitorAction extends HandledTransportActi
 
     @Override
     protected void doExecute(Task task, IndexThreatIntelMonitorRequest request, ActionListener<IndexThreatIntelMonitorResponse> listener) {
-        // validate user
-        User user = readUserFromThreadContext(this.threadPool);
-        String validateBackendRoleMessage = validateUserBackendRoles(user, this.filterByEnabled);
-        if (!"".equals(validateBackendRoleMessage)) {
-            listener.onFailure(SecurityAnalyticsException.wrap(new OpenSearchStatusException(validateBackendRoleMessage, RestStatus.FORBIDDEN)));
-            return;
+        try {
+            // validate user
+            User user = readUserFromThreadContext(this.threadPool);
+            String validateBackendRoleMessage = validateUserBackendRoles(user, this.filterByEnabled);
+            if (!"".equals(validateBackendRoleMessage)) {
+                listener.onFailure(SecurityAnalyticsException.wrap(new OpenSearchStatusException(validateBackendRoleMessage, RestStatus.FORBIDDEN)));
+                return;
+            }
+
+            IndexMonitorRequest indexMonitorRequest = buildIndexMonitorRequest(request);
+            AlertingPluginInterface.INSTANCE.indexMonitor((NodeClient) client, indexMonitorRequest, namedWriteableRegistry, ActionListener.wrap(
+                    r -> {
+                        log.debug(
+                                "{} threat intel monitor {}", request.getMethod() == RestRequest.Method.PUT ? "Updated" : "Created",
+                                r.getId()
+                        );
+                        IndexThreatIntelMonitorResponse response = getIndexThreatIntelMonitorResponse(r, user);
+                        listener.onResponse(response);
+                    }, e -> {
+                        log.error("failed to creat threat intel monitor", e);
+                        listener.onFailure(new SecurityAnalyticsException("Failed to create threat intel monitor", RestStatus.INTERNAL_SERVER_ERROR, e));
+                    }
+            ));
+        } catch (Exception e) {
+            log.error(() -> new ParameterizedMessage("Unexpected failure while indexing threat intel monitor {} named {}", request.getId(), request.getThreatIntelMonitor().getName()));
+            listener.onFailure(new SecurityAnalyticsException("Unexpected failure while indexing threat intel monitor", RestStatus.INTERNAL_SERVER_ERROR, e));
         }
-        //create
+    }
+
+    private IndexThreatIntelMonitorResponse getIndexThreatIntelMonitorResponse(IndexMonitorResponse r, User user) throws IOException {
+        IndexThreatIntelMonitorResponse response = new IndexThreatIntelMonitorResponse(r.getId(), r.getVersion(), r.getSeqNo(), r.getPrimaryTerm(),
+                ThreatIntelMonitorUtils.buildThreatIntelMonitorDto(r.getId(), r.getMonitor(), xContentRegistry));
+        return response;
+    }
+
+    private IndexMonitorRequest buildIndexMonitorRequest(IndexThreatIntelMonitorRequest request) throws IOException {
         String id = request.getMethod() == RestRequest.Method.POST ? Monitor.NO_ID : request.getId();
-        IndexMonitorRequest indexMonitorRequest = new IndexMonitorRequest(
+        return new IndexMonitorRequest(
                 id,
                 SequenceNumbers.UNASSIGNED_SEQ_NO,
                 SequenceNumbers.UNASSIGNED_PRIMARY_TERM,
                 WriteRequest.RefreshPolicy.IMMEDIATE,
                 request.getMethod(),
-                getMonitor(request),
+                buildThreatIntelMonitor(request),
                 null
         );
-        AlertingPluginInterface.INSTANCE.indexMonitor((NodeClient) client, indexMonitorRequest, namedWriteableRegistry, ActionListener.wrap(
-                r -> {
-                    listener.onResponse(new IndexThreatIntelMonitorResponse(r.getId(), r.getVersion(), r.getSeqNo(), r.getPrimaryTerm(),
-                            new ThreatIntelMonitorDto(
-                                    r.getId(),
-                                    r.getMonitor().getName(),
-                                    request.getThreatIntelMonitor().getPerIocTypeScanInputList(),
-                                    r.getMonitor().getSchedule(),
-                                    r.getMonitor().getEnabled(),
-                                    user)
-                    ));
-                }, e -> {
-                    log.error("failed to creat custom monitor", e);
-                    listener.onFailure(e);
-                }
-        ));
     }
 
-    private static Monitor getMonitor(IndexThreatIntelMonitorRequest request) {
+    private Monitor buildThreatIntelMonitor(IndexThreatIntelMonitorRequest request) throws IOException {
         //TODO replace with threat intel monitor
+        DocLevelMonitorInput docLevelMonitorInput = new DocLevelMonitorInput(
+                String.format("threat intel input for monitor named %s", request.getThreatIntelMonitor().getName()),
+                request.getThreatIntelMonitor().getIndices(),
+                Collections.emptyList() // no percolate queries
+        );
+        List<PerIocTypeScanInput> perIocTypeScanInputs = request.getThreatIntelMonitor().getPerIocTypeScanInputList().stream().map(
+                it -> new PerIocTypeScanInput(it.getIocType(), it.getIndexToFieldsMap())
+        ).collect(Collectors.toList());
+        ThreatIntelInput threatIntelInput = new ThreatIntelInput(perIocTypeScanInputs);
+        RemoteDocLevelMonitorInput remoteDocLevelMonitorInput = new RemoteDocLevelMonitorInput(
+                threatIntelInput.getThreatIntelInputAsBytesReference(),
+                docLevelMonitorInput);
+        List<RemoteMonitorTrigger> triggers = new ArrayList<>();
+        for (ThreatIntelTriggerDto it : request.getThreatIntelMonitor().getTriggers()) {
+            try {
+                RemoteMonitorTrigger trigger = ThreatIntelMonitorUtils.buildRemoteMonitorTrigger(it);
+                triggers.add(trigger);
+            } catch (IOException e) {
+                logger.error(() -> new ParameterizedMessage("failed to parse threat intel trigger {}", it.getId()), e);
+                throw new RuntimeException(e);
+            }
+        }
         return new Monitor(
                 request.getMethod() == RestRequest.Method.POST ? Monitor.NO_ID : request.getId(),
                 Monitor.NO_VERSION,
-                request.getThreatIntelMonitor().getName(),
+                StringUtils.isBlank(request.getThreatIntelMonitor().getName()) ? "threat_intel_monitor" : request.getThreatIntelMonitor().getName(),
                 request.getThreatIntelMonitor().isEnabled(),
                 request.getThreatIntelMonitor().getSchedule(),
                 Instant.now(),
-                Instant.now(),
-//                "CUSTOM_" +
-                Monitor.MonitorType.DOC_LEVEL_MONITOR.getValue(),
+                request.getThreatIntelMonitor().isEnabled() ? Instant.now() : null,
+                THREAT_INTEL_MONITOR_TYPE,
                 request.getThreatIntelMonitor().getUser(),
                 1,
-                List.of(new DocLevelMonitorInput("", List.of("*"), Collections.emptyList())),
-                Collections.emptyList(),
+                List.of(remoteDocLevelMonitorInput),
+                triggers,
                 Collections.emptyMap(),
                 new DataSources(),
                 PLUGIN_OWNER_FIELD
         );
     }
 
-    private PerIocTypeScanInput getPerIocTypeScanInput(Monitor monitor) {
-        return null;
-    }
+
 }
